# bin-picking

./: README.md
coo_tran/: README.md
coo_tran/coo_tran/: CMakeLists.txt  package.xml
coo_tran/coo_tran/include/: cood_tran.h
coo_tran/coo_tran/launch/: coo_tran.launch  pdb.launch
coo_tran/coo_tran/src/: cood_tran.cpp  cood_tran_depth.cpp  cood_tran_node.cpp
coo_tran/location_srv/: CMakeLists.txt  package.xml
coo_tran/location_srv/srv/: Location.srv
cood_tran/cood_tran/: CMakeLists.txt  package.xml
cood_tran/cood_tran/include/: CoordinateTran.h  cood_tran.h
cood_tran/cood_tran/src/: CoordinateTran.cpp  cood_tran.cpp  cood_tran_node.cpp  coordiniate_node_simple.cpp
cood_tran/cood_tran_msgs/: CMakeLists.txt  package.xml
cood_tran/cood_tran_msgs/srv/: car_interact.srv  location.srv
cood_tran/coord_tran_msgs/: CMakeLists.txt
coord_tran/: README.md
coord_tran/coord_tran/: CMakeLists.txt
coord_tran/coord_tran/.kdev4/: coord_tran.kdev4
coord_tran/coord_tran/include/: CoordinateTran.h
coord_tran/coord_tran/launch/: coo_tran.launch
coord_tran/coord_tran/mid_script/: cood_tran_depth.cpp  coordiniate_node_simple.cpp  opengr.cpp
coord_tran/coord_tran/src/: CoordinateTran.cpp  coord_tran_node.cpp  threeDdeal.cpp  threeDtest.cpp
coord_tran/coord_tran_msgs/: package.xml
coord_tran/coord_tran_msgs/srv/: location.srv
dobot/: CMakeLists.txt  package.xml
dobot/arm_msgs/: CMakeLists.txt  package.xml
dobot/arm_msgs/srv/: arm_car_interact.srv
dobot/dobot/: CMakeLists.txt  package.xml
dobot/dobot/include/: DobotTask.h
dobot/dobot/launch/: dobot.launch
dobot/dobot/src/: DobotServer.cpp  DobotTask.cpp  fake1.cpp  iotest.cpp  iotest16.cpp  iotest_close.cpp  iotest_close16.cpp  r_test.cpp  testclient_location.cpp
dobot/launch/: dobot.launch  test_dobot.launch
dobot/src/: DobotClient_PTP.cpp  DobotServer.cpp  testclient_location.cpp
start/: CMakeLists.txt  package.xml
start/launch/: start.launch
